--- a/css/style.css
+++ b/css/style.css
@@ -231,13 +231,15 @@ footer nav + div {
     padding: 0 2% 0 0;
     font-size: .9em;
     color: #0A20A2;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 
 /* Header Banner */
 
 #banner {
-    padding: 1% 5%;
+    padding: 1% 2.5%;
     justify-content: space-between;
 }
 
@@ -442,6 +444,10 @@ footer nav + div {
 
 
 /* Footer - Location */
+
+footer p {
+    font-size: 1em;
+}
 
 footer div,
 footer nav ul {
