--- a/misc/style_old.css
+++ b/misc/style_old.css
@@ -214,10 +214,15 @@ footer nav + div {
     color: #6A6A6A;
 }
 
+.sub-nav {
+    display: none;
+}
+
+
 /* Location - Navigation */
 
 #location-navigation ul {
-    width: 90%;
+    width: 100%;
     padding: 3em 5% 0;
     justify-content: flex-end;
 }
@@ -225,12 +230,9 @@ footer nav + div {
 #location-navigation ul li {
     padding: 0 2% 0 0;
     font-size: .9em;
+    color: #0A20A2;
     white-space: nowrap;
     overflow: hidden;
-}
-
-#location-navigation ul .sub-nav {
-    display: none;
 }
 
 
@@ -362,16 +364,11 @@ main#detail h1 {
 }
 
 main#detail img {
-    width: 100%;
-    float: none;
-    margin: 0 0 0 0;
-}
-
-main#detail .imgright {
     width: 40%;
     float: right;
     margin: 0 5% 0 2%;
 }
+
 main#detail p {
     padding: 1% 5% 1% 0;
 }
@@ -724,7 +721,6 @@ footer nav ul > li {
         transition: left 0.3s ease,
                   box-shadow 0.3s ease;
         z-index: 10;
-        background-color: #0A20A2;
     }
 
     .main-menu ul {
@@ -781,17 +777,15 @@ footer nav ul > li {
       left: 0;
       top: 0;
       width: 100%;
-      height: 100vh;
+      height: 100%;
       z-index: 9;
       background: rgba(0,0,0,0.5);
       cursor: default;
     }
-    
-    #location-navigation ul .sub-nav {
+
+    .sub-nav {
         display: block;
-        padding: 0 0 10% 10%;
     }
-    
     
 /* Header Banner */
 
